Update the git attributes.

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,5 @@
 *.js linguist-generated=true
 *.py linguist-generated=true
 *.ts linguist-generated=true
+*.html linguist-generated=true
+*.css linguist-generated=true
