--- a/sw-c-language/course-Microchip-syntax-and-structure-of-C/02-variables/Makefile
+++ b/sw-c-language/course-Microchip-syntax-and-structure-of-C/02-variables/Makefile
@@ -1,3 +1,7 @@
 code-variables:
 	gcc -g -o ./bin/code-variables code-variables.c
 	./bin/code-variables
+
+code-header-file:
+	gcc -g -o ./bin/code-header-file code-header-file.c
+	./bin/code-header-file
