feat: hello world
Signed-off-by: Kent Tonino <tonino.kentlouise@gmail.com>

--- a/cpp/Sololearn-Introduction-to-CPP/01-Basic-Concepts/Makefile
+++ b/cpp/Sololearn-Introduction-to-CPP/01-Basic-Concepts/Makefile
@@ -1,3 +1,7 @@
 01-output:
 	g++ -o ./bin/01-output 01-output.cpp
 	./bin/01-output
+
+02-output:
+	g++ -o ./bin/02-statements 02-statements.cpp
+	./bin/02-statements
