--- a/cpp/Sololearn-Introduction-to-CPP/01-Basic-Concepts/Makefile
+++ b/cpp/Sololearn-Introduction-to-CPP/01-Basic-Concepts/Makefile
@@ -5,3 +5,11 @@
 02-output:
 	g++ -o ./bin/02-statements 02-statements.cpp
 	./bin/02-statements
+
+03-output:
+	g++ -o ./bin/03-program-structure 03-program-structure.cpp
+	./bin/03-program-structure
+
+04-variables:
+	g++ -o ./bin/04-variables 04-variables.cpp
+	./bin/04-variables
