--- a/assembly/arch-RISCV/Makefile
+++ b/assembly/arch-RISCV/Makefile
@@ -1,4 +1,4 @@
 0001:
-	riscv64-linux-gnu-as -o ./obj/0001.o 0001-hello.s
-	riscv64-linux-gnu-ld -o ./bin/0001 ./obj/0001.o
-	qemu-riscv64 ./bin/0001
+	riscv64-linux-gnu-as -march=rv32i -mabi=ilp32 -o ./obj/0001.o 0001-hello.s
+	riscv64-linux-gnu-ld -m elf32lriscv -o ./bin/0001 ./obj/0001.o
+	qemu-riscv32 ./bin/0001
